[gd_scene load_steps=7 format=3 uid="uid://dqaca14u5yfdd"]

[ext_resource type="Script" uid="uid://ws8xd6xtsn6x" path="res://gui/menu/scripts/input_settings.gd" id="1_y6l0d"]
[ext_resource type="PackedScene" uid="uid://cmhkbknvy1y8v" path="res://gui/menu/input_button.tscn" id="2_u4tk5"]
[ext_resource type="FontFile" uid="uid://cgswncuhvcmy6" path="res://fonts/PixelifySans-VariableFont_wght.ttf" id="3_hb3vm"]
[ext_resource type="PackedScene" uid="uid://c8ax3u5ckj3ct" path="res://gui/menu/effect/switch.tscn" id="4_55ow1"]
[ext_resource type="AudioStream" uid="uid://8wuo13ue5vf7" path="res://audios/select.wav" id="5_vkjha"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6k22c"]
bg_color = Color(0, 0.470588, 0.635294, 1)

[node name="Input_settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y6l0d")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6k22c")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.0
offset_top = -241.0
offset_right = 359.0
offset_bottom = 241.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputButton" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_u4tk5")]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hb3vm")

[node name="InputButton2" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_u4tk5")]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hb3vm")

[node name="InputButton3" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_u4tk5")]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hb3vm")

[node name="InputButton4" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_u4tk5")]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hb3vm")

[node name="InputButton5" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_u4tk5")]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hb3vm")

[node name="InputButton6" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("2_u4tk5")]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_hb3vm")

[node name="Botão_Padrão" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_hb3vm")
text = "Configuração Padrão"

[node name="Back" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("3_hb3vm")
text = "Salvar e Voltar"

[node name="SwitchInput" parent="." instance=ExtResource("4_55ow1")]
stream = ExtResource("5_vkjha")

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Botão_Padrão" to="." method="_on_botão_padrão_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
